@@ -4,6 +4,9 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/08/29
+	* Applied Mpeg's work on GS [Toms]
+	  ( http://gpegon.free.fr/ea/gunslinger_08-29-06_mpeg.txt )
+	* Fixed a syntax error in @showmobs [Toms]
 	* Added @showmobs. It shows selected mobs on your mini-map (excluding
 	  mini-bosses & MVP) thanks to KarLaeda for the command [Lupus]
 2006/08/28
